# vu_thesis

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_sweep.py  q1.py  q10.py  q11.py  q14.py  q18.py  q3.py  q4.py  q6.py  q7.py  q9.py
logs/: compare_engine.csv  final_flag.csv  final_nscaling.csv  final_sf.csv
scripts/: compare_engine.py  plot_comparison.py  plot_experiments.py  scaling_experiments.py  setup_db.py
