[project]
name = "Thesis"
version = "1.0.0"
description = "Bsc. Computer Science Thesis for VU"
requires-python = ">=3.14"

dependencies = [
    "duckdb>=1.4.3",
    "numpy>=1.26.4",
    "duckdb-engine>=0.17",
    "py-spy>=0.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0"
]

[tool.setuptools]
packages = []


